--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js" 
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "express": "^4.17.1",
+    "jw-vue-pagination": "^1.0.3",
     "serve-static": "^1.14.1",
     "vue": "^3.0.0"
   },
